WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37857
Fixes v8 binding generator for EventSource
https://bugs.webkit.org/show_bug.cgi?id=37857
Summary
Fixes v8 binding generator for EventSource
Marcus Bulach
Reported
2010-04-20 07:05:41 PDT
EventSource needs to be marked as an ActiveDomType.
Attachments
Patch
(2.52 KB, patch)
2010-04-20 07:12 PDT
,
Marcus Bulach
no flags
Details
Formatted Diff
Diff
Patch (fixes error message required by fast/eventsource layout tests).
(3.51 KB, patch)
2010-04-20 08:31 PDT
,
Marcus Bulach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Marcus Bulach
Comment 1
2010-04-20 07:12:13 PDT
Created
attachment 53813
[details]
Patch
Marcus Bulach
Comment 2
2010-04-20 07:21:42 PDT
Hi Nate, Ages ago I implemented the binding for eventsource, and turns out I didn't fully enable it, so looks like it got a bit stale. As a follow up of this change, I'll enable eventsource by default on the other side and will make sure the layout tests are properly turned on this time.. :) Would you please take a look at this patch? Thanks! Marcus
Marcus Bulach
Comment 3
2010-04-20 08:31:37 PDT
Created
attachment 53823
[details]
Patch (fixes error message required by fast/eventsource layout tests).
Nate Chapin
Comment 4
2010-04-20 08:50:38 PDT
Comment on
attachment 53823
[details]
Patch (fixes error message required by fast/eventsource layout tests). Ok, looks good. Do you need cq+ on this?
Marcus Bulach
Comment 5
2010-04-20 08:53:18 PDT
thanks for the quick review! yep, I need cq+ thanks, marcus (In reply to
comment #4
)
> (From update of
attachment 53823
[details]
) > Ok, looks good. > > Do you need cq+ on this?
Nate Chapin
Comment 6
2010-04-20 08:55:55 PDT
Comment on
attachment 53823
[details]
Patch (fixes error message required by fast/eventsource layout tests). cq+ then. So will Chromium be enabling eventsource on tip of tree and running these tests soon then?
Marcus Bulach
Comment 7
2010-04-20 09:02:52 PDT
(In reply to
comment #6
)
> (From update of
attachment 53823
[details]
) > cq+ then. > > So will Chromium be enabling eventsource on tip of tree and running these tests > soon then?
precisely! once we roll this change, I'll enable eventsource:
http://codereview.chromium.org/557037
and then once it's enable, I'll turn on the tests:
https://bugs.webkit.org/show_bug.cgi?id=37863
just needs a few rounds to get it through both sides.
WebKit Commit Bot
Comment 8
2010-04-21 05:00:38 PDT
Comment on
attachment 53823
[details]
Patch (fixes error message required by fast/eventsource layout tests). Clearing flags on attachment: 53823 Committed
r57967
: <
http://trac.webkit.org/changeset/57967
>
WebKit Commit Bot
Comment 9
2010-04-21 05:00:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug