2010-04-21  Marcus Bulach  <bulach@chromium.org>

Reviewed by Nate Chapin.

        EventSource needs to be marked as an ActiveDomType.
        https://bugs.webkit.org/show_bug.cgi?id=37857
        Existing layout tests (fast/eventsource and http/tests/eventsource/) should pass when compiling with eventsource enabled.

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/V8DOMWrapper.cpp:
        * bindings/v8/custom/V8EventSourceConstructor.cpp:
        (WebCore::V8EventSource::constructorCallback):

Canonical link: https://commits.webkit.org/49248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57967 268f45cc-cd09-0410-ab3c-d52691b4dbfc